--- a/_config.yml
+++ b/_config.yml
@@ -96,18 +96,18 @@ author:
   quora            : "https://www.quora.com/profile/Anjali-827"
   facebook         :
   wordpress        : "https://alkalianjali.wordpress.com"
-  github           : "https://github.com/anjalibhavan"
+  github           : "anjalibhavan"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://linkedin.com/in/anjali-bhavan"
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "anjali-bhavan"
+  orcid            : 
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : "https://stackoverflow.com/users/9499285/anjali-bhavan"
   steam            :
-  tumblr           :
+  tumblr           : "http://nothingfuckswithmyhozier.tumblr.com/"
   twitter          : 
   vine             :
   weibo            :
