--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,12 +9,10 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Literary publications"
+    url: /litpubs/
        
-    
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  
