--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "Literary publications"
     url: /litpubs/
        
-  - title: "CV"
+  - title: "CV/Resume"
     url: /cv/
     
   
