--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,13 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Academic Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Technical Projects"
+    url: /projects/       
     
   - title: "Literary publications"
-    url: /litpubs/
+    url: /literary-publications/
        
   - title: "CV/Resume"
     url: /cv/
