--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   soundcloud       :
   stackoverflow    : "https://stackoverflow.com/users/9499285/anjali-bhavan"
   steam            :
-  tumblr           : "http://nothingfuckswithmyhozier.tumblr.com/"
+  tumblr           : "nothingfuckswithmyhozier"
   twitter          : 
   vine             :
   weibo            :
