--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  quora            : "https://www.quora.com/profile/Anjali-827"
+  quora            : 
   facebook         :
   wordpress        : "https://alkalianjali.wordpress.com"
   github           : "anjalibhavan"
@@ -107,7 +107,7 @@ author:
   soundcloud       :
   stackoverflow    : "https://stackoverflow.com/users/9499285/anjali-bhavan"
   steam            :
-  tumblr           : "nothingfuckswithmyhozier"
+  tumblr           : 
   twitter          : 
   vine             :
   weibo            :
