--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   orcid            : 
   pinterest        :
   soundcloud       :
-  stackoverflow    : "https://stackoverflow.com/users/9499285/anjali-bhavan"
+  stackoverflow    : "9499285/anjali-bhavan"
   steam            :
   tumblr           : 
   twitter          : 
