--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Anjali Bhavan"
-  avatar           : #"profile.png"
+  avatar           : "profile.jpg"
   bio              : "Student, Writer and Researcher"
   location         : "New Delhi, India"
   employer         :
