--- a/_config.yml
+++ b/_config.yml
@@ -250,6 +250,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
+  - jekyll-seo-tag
   - jekyll-feed
   - jekyll-redirect-from
 # mimic GitHub Pages with --safe
