--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   flickr           :
   quora            : 
   facebook         :
-  wordpress        : "https://alkalianjali.wordpress.com"
+  wordpress        : 
   github           : "anjalibhavan"
   google_plus      :
   keybase          :
@@ -108,7 +108,7 @@ author:
   stackoverflow    : "9499285/anjali-bhavan"
   steam            :
   tumblr           : 
-  twitter          : 
+  twitter          : '123Anjalib'
   vine             :
   weibo            :
   xing             :
