--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
   stackoverflow    : "9499285/anjali-bhavan"
   steam            :
   tumblr           : 
-  twitter          : '123Anjalib'
+  twitter          : #'123Anjalib'
   vine             :
   weibo            :
   xing             :
