--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Anjali Bhavan"
   avatar           : "profile.jpg"
   bio              : "Student, Writer and Researcher"
-  location         : "New Delhi, India"
+  location         : "India"
   employer         :
   googlescholar    : "https://scholar.google.co.in/citations?user=GUP8CwgAAAAJ&hl=en"
   email            : "anjalibhavan98@gmail.com"
@@ -101,7 +101,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : #"anjali-bhavan"
+  linkedin         : "anjali-bhavan"
   orcid            : 
   pinterest        :
   soundcloud       :
