--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Technical Projects"
     url: /projects/       
     
-  - title: "Literary publications"
-    url: /literary-publications/
+  - title: "Writing"
+    url: /writing/
        
   - title: "CV/Resume"
     url: /cv/
