--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Anjali Bhavan"
 title_separator          : "-"
 name                     : &name "Anjali Bhavan"
 description              : &description "personal description"
-url                      : https://anjalibhavan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://anjalibhavan.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "anjalibhavan/anjalibhavan.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -109,11 +109,7 @@ author:
   steam            :
   tumblr           : 
   twitter          : #'123Anjalib'
-  vine             :
-  weibo            :
-  xing             :
-  youtube          :
-  wikipedia        :
+  
 
 
 # Reading Files
