--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Writing"
     url: /writing/
        
-  - title: "CV"
-    url: /cv/
+  - title: "Resume"
+    url: /resume/
 
   - title: "Talks"
     url: /talks/
